--- a/Back-End-Server/functions/package.json
+++ b/Back-End-Server/functions/package.json
@@ -35,11 +35,12 @@
     "@types/express": "^4.17.0",
     "@types/hapi__joi": "^15.0.3",
     "@types/jsonwebtoken": "^8.3.2",
-    "@types/morgan": "^1.7.36",
     "@types/mongoose": "^5.5.11",
+    "@types/morgan": "^1.7.36",
     "@types/request": "^2.48.2",
     "@types/request-promise": "^4.1.44",
     "nodemon": "^1.19.1",
+    "ts-node": "^8.3.0",
     "tslint": "^5.12.0",
     "typescript": "^3.2.2"
   },
