--- a/Back-End-Server/functions/package.json
+++ b/Back-End-Server/functions/package.json
@@ -1,11 +1,12 @@
 {
   "name": "functions",
   "scripts": {
+    "start": "nodemon",
     "lint": "tslint --project tsconfig.json",
     "build": "tsc",
     "serve": "npm run build && firebase serve --only functions",
     "shell": "npm run build && firebase functions:shell",
-    "start": "npm run shell",
+    "shellx": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
@@ -22,6 +23,7 @@
     "firebase-admin": "^8.3.0",
     "firebase-functions": "^3.2.0",
     "firebase-tools": "^7.2.2",
+    "http-status-codes": "^1.3.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.5",
     "morgan": "^1.9.1",
