--- a/package.json
+++ b/package.json
@@ -3,48 +3,46 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.0.2",
-    "@angular/cli": "~7.3.5",
-    "@angular/common": "~8.0.2",
-    "@angular/compiler": "~8.0.2",
-    "@angular/compiler-cli": "~8.0.2",
-    "@angular/core": "~8.0.2",
-    "@angular/forms": "~8.0.2",
-    "@angular/platform-browser": "~8.0.2",
-    "@angular/platform-browser-dynamic": "~8.0.2",
-    "@angular/router": "~8.0.2",
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@ng-bootstrap/ng-bootstrap": "^4.2.1",
-    "@types/node": "~8.9.4",
-    "bootstrap": "^4.3.1",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.5.2",
-    "tslib": "^1.9.0",
-    "typescript": "~3.4.5",
-    "zone.js": "~0.9.1",
-    "fs-extra": "8.1.0",
-    "cookie-parser": "^1.4.3",
+    "@angular-devkit/build-angular": "~0.803.23",
+    "@angular/animations": "~8.2.14",
+    "@angular/cli": "~8.3.23",
+    "@angular/common": "~8.2.14",
+    "@angular/compiler": "~8.2.14",
+    "@angular/compiler-cli": "~8.2.14",
+    "@angular/core": "~8.2.14",
+    "@angular/forms": "~8.2.14",
+    "@angular/platform-browser": "~8.2.14",
+    "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/router": "~8.2.14",
+    "@types/node": "~13.1.8",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
+    "core-js": "^3.6.4",
     "debug": "~4.1.1",
+    "express": "^4.17.1",
+    "fs-extra": "8.1.0",
     "morgan": "^1.9.1",
-    "express": "^4.16.4",
-    "body-parser": "^1.18.3"
+    "rxjs": "~6.5.4",
+    "tslib": "^1.10.0",
+    "typescript": "^3.5.3",
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "concurrently": "^4.1.0",
-    "@angular/language-service": "~8.0.2",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
+    "@angular/language-service": "~8.2.14",
+    "@types/jasmine": "~3.5.1",
+    "@types/jasminewd2": "~2.0.8",
+    "codelyzer": "^5.2.1",
+    "concurrently": "^5.0.2",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0"
+    "karma": "~4.4.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.1",
+    "karma-jasmine": "~3.1.0",
+    "karma-jasmine-html-reporter": "^1.5.1",
+    "protractor": "~5.4.2",
+    "ts-node": "~8.6.2",
+    "tslint": "^5.20.1"
   },
   "scripts": {
     "start": "concurrently \"yarn start-frontend || npm run start-frontend\" \"yarn start-backend || npm run start-backend\"",
