--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "morgan": "^1.9.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "typescript": "^3.5.3",
+    "typescript": "3.5.3",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
