--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.1",
     "karma-jasmine": "~3.1.0",
     "karma-jasmine-html-reporter": "^1.5.1",
+    "nodemon": "^2.0.2",
     "protractor": "~5.4.2",
     "ts-node": "~8.6.2",
     "tslint": "^5.20.1"
@@ -57,7 +58,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "start-backend": "node server/server.js"
+    "start-backend": "nodemon server/server.js"
   },
   "proxy": "http://localhost:3001",
   "browserslist": [
