--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.9",
     "morgan": "~1.9.1",
+    "request": "^2.88.0",
     "request-promise": "^4.2.5"
   },
   "engines": {
