--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.1.0",
-    "@angular-devkit/build-angular": "~0.803.25",
-    "@angular/animations": "~8.2.14",
+    "@angular-devkit/build-angular": "~0.900.1",
+    "@angular/animations": "~9.0.0",
     "@angular/cdk": "~8.2.3",
-    "@angular/cli": "~8.3.25",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/forms": "~8.2.14",
+    "@angular/cli": "~9.0.1",
+    "@angular/common": "~9.0.0",
+    "@angular/compiler": "~9.0.0",
+    "@angular/compiler-cli": "~9.0.0",
+    "@angular/core": "~9.0.0",
+    "@angular/forms": "~9.0.0",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
-    "@types/node": "~13.1.8",
+    "@angular/platform-browser": "~9.0.0",
+    "@angular/platform-browser-dynamic": "~9.0.0",
+    "@angular/router": "~9.0.0",
+    "@types/node": "^12.11.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "core-js": "^3.6.4",
@@ -29,14 +29,14 @@
     "ngx-captcha": "^7.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "typescript": "3.5.3",
-    "zone.js": "^0.9.1"
+    "typescript": "3.7.5",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular/language-service": "~8.2.14",
+    "@angular/language-service": "~9.0.0",
     "@types/jasmine": "~3.5.1",
     "@types/jasminewd2": "~2.0.8",
-    "codelyzer": "^5.2.1",
+    "codelyzer": "^5.1.2",
     "concurrently": "^5.0.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
