--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@agm/core": "^1.1.0",
     "@angular-devkit/build-angular": "~0.900.6",
     "@angular/animations": "~9.0.6",
     "@angular/cdk": "~9.1.2",
@@ -13,6 +12,7 @@
     "@angular/compiler-cli": "~9.0.6",
     "@angular/core": "~9.0.6",
     "@angular/forms": "~9.0.6",
+    "@angular/google-maps": "^9.1.2",
     "@angular/material": "^9.1.2",
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
