Remove request, request-promise, use axios

--- a/server/package.json
+++ b/server/package.json
@@ -6,9 +6,10 @@
     "start": "node ./server.js"
   },
   "dependencies": {
-    "@hapi/joi": "^17.1.0",
+    "@hapi/joi": "^17.1.1",
+    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "~1.4.5",
     "cors": "^2.8.5",
     "debug": "~4.1.1",
     "dotenv": "^8.2.0",
@@ -16,10 +17,8 @@
     "http-errors": "~1.7.3",
     "http-status-codes": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.8.11",
-    "morgan": "~1.9.1",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.5"
+    "mongoose": "^5.9.4",
+    "morgan": "~1.9.1"
   },
   "engines": {
     "node": ">=10.14.1"
