--- a/package.json
+++ b/package.json
@@ -12,42 +12,37 @@
     "@angular/compiler-cli": "~9.1.0",
     "@angular/core": "~9.1.0",
     "@angular/forms": "~9.1.0",
-    "@angular/google-maps": "^9.1.2",
+    "@angular/google-maps": "^9.2.0",
     "@angular/material": "^9.2.0",
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
-    "@types/node": "^12.11.1",
-    "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.4",
+    "@types/node": "^12.12.31",
     "core-js": "^3.6.4",
-    "debug": "~4.1.1",
-    "express": "^4.17.1",
-    "fs-extra": "8.1.0",
-    "morgan": "^1.9.1",
+    "fs-extra": "9.0.0",
     "ngx-captcha": "^8.0.1",
     "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
-    "typescript": "3.7.5",
-    "zone.js": "~0.10.2"
+    "tslib": "^1.11.1",
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular/language-service": "~9.1.0",
-    "@types/jasmine": "~3.5.1",
+    "@types/jasmine": "~3.5.10",
     "@types/jasminewd2": "~2.0.8",
-    "codelyzer": "^5.1.2",
-    "concurrently": "^5.0.2",
+    "codelyzer": "^5.2.1",
+    "concurrently": "^5.1.0",
     "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
+    "jasmine-spec-reporter": "~5.0.1",
     "karma": "~4.4.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.1",
-    "karma-jasmine": "~3.1.0",
-    "karma-jasmine-html-reporter": "^1.5.1",
+    "karma-jasmine": "~3.1.1",
+    "karma-jasmine-html-reporter": "^1.5.3",
     "nodemon": "^2.0.2",
-    "protractor": "~5.4.2",
-    "ts-node": "~8.6.2",
-    "tslint": "^5.20.1"
+    "protractor": "~5.4.3",
+    "ts-node": "~8.8.1",
+    "tslint": "~6.1.0",
+    "typescript": "~3.8.3"
   },
   "scripts": {
     "init": "npm install && npm install --prefix server ",
