--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
-    "@types/node": "^13.9.8",
+    "@types/node": "^13.11.0",
     "core-js": "^3.6.4",
     "fs-extra": "9.0.0",
     "ngx-captcha": "^8.0.1",
-    "rxjs": "~6.5.4",
+    "rxjs": "^6.5.5",
     "tslib": "^1.11.1",
     "zone.js": "~0.10.3"
   },
@@ -41,7 +41,7 @@
     "nodemon": "^2.0.2",
     "protractor": "~5.4.3",
     "ts-node": "~8.8.1",
-    "tslint": "~6.1.0",
+    "tslint": "^6.1.1",
     "typescript": "~3.8.3"
   },
   "scripts": {
